--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,75 @@
-streamlit==1.40.1
-streamlit-cookies-controller==0.0.4 
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.8
+aiosignal==1.3.1
+altair==5.0.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+attrs==24.2.0
+blinker==1.6.2
+Bottleneck==1.4.2
+Brotli==1.0.9
+cachetools==5.3.3
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+deprecation==2.1.0
+frozenlist==1.5.0
+gitdb==4.0.7
+GitPython==3.1.43
+gotrue==2.11.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httpx==0.27.2
+hyperframe==6.0.1
+idna==3.7
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.7.1
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+mdurl==0.1.0
+multidict==6.1.0
+numexpr==2.10.1
+numpy==1.26.4
+packaging==24.1
+pandas==2.2.2
+pillow==11.0.0
+pip==24.2
+postgrest==0.18.0
+propcache==0.2.0
+protobuf==4.25.3
+pyarrow==16.1.0
+pydantic==2.10.2
+pydantic_core==2.27.1
+pydeck==0.8.0
+Pygments==2.15.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+realtime==2.0.6
+referencing==0.30.2
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.10.6
+setuptools==75.1.0
+six==1.16.0
+smmap==4.0.0
+sniffio==1.3.1
 st-supabase-connection==2.0.1
+storage3==0.9.0
+streamlit==1.40.0
+streamlit-cookies-controller==0.0.4
+supabase==2.10.0
+supafunc==0.7.0
+tenacity==9.0.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2023.3
+urllib3==2.2.3
+websockets==13.1
+wheel==0.44.0
+yarl==1.18.0
